--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -14,6 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.12"
