--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
